--- a/unittest/MiniRESTTest.dproj
+++ b/unittest/MiniRESTTest.dproj
@@ -78,6 +78,7 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="uTest.pas"/>
+        <DCCReference Include="..\MiniREST.Intf.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
