--- a/unittest/ORM/MiniRESTORMTest.dproj
+++ b/unittest/ORM/MiniRESTORMTest.dproj
@@ -1,8 +1,8 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
-        <ProjectGuid>{443E3E84-8DB0-4A3B-86B8-DADA4ADEC42A}</ProjectGuid>
+        <ProjectGuid>{254E4C91-E1BD-43C8-9315-577CC3BDC551}</ProjectGuid>
         <ProjectVersion>18.2</ProjectVersion>
-        <MainSource>MiniRESTSQLTest.dpr</MainSource>
+        <MainSource>MiniRESTORMTest.dpr</MainSource>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
@@ -35,12 +35,12 @@
         <Base>true</Base>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
-        <Icon_MainIcon>$(BDS)\bin\delphi_PROJECTICON.ico</Icon_MainIcon>
-        <SanitizedProjectName>MiniRESTSQLTest</SanitizedProjectName>
         <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;$(DCC_Namespace)</DCC_Namespace>
-        <DCC_UnitSearchPath>$(DUnitX);$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <Icns_MainIcns>$(BDS)\bin\delphi_PROJECTICNS.icns</Icns_MainIcns>
+        <Icon_MainIcon>$(BDS)\bin\delphi_PROJECTICON.ico</Icon_MainIcon>
+        <DCC_UnitSearchPath>$(DUnitX);$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <UsingDelphiRTL>true</UsingDelphiRTL>
+        <SanitizedProjectName>MiniRESTORMTest</SanitizedProjectName>
         <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
         <DCC_ExeOutput>.\$(Platform)\$(Config)</DCC_ExeOutput>
         <DCC_E>false</DCC_E>
@@ -50,11 +50,11 @@
         <DCC_K>false</DCC_K>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
-        <DCC_UsePackage>DBXSqliteDriver;RESTComponents;DataSnapServerMidas;DBXDb2Driver;DBXInterBaseDriver;vclactnband;ACBr_TEFD;vclFireDAC;fs24;emsclientfiredac;ACBr_SATWS;DataSnapFireDAC;svnui;tethering;JvGlobus;FireDACADSDriver;JvPluginSystem;ACBr_BPe;DBXMSSQLDriver;JvMM;DatasnapConnectorsFreePascal;FireDACMSSQLDriver;vcltouch;JvBands;ACBr_NFe;vcldb;bindcompfmx;svn;Intraweb;DBXOracleDriver;JvJans;JvNet;inetdb;JvAppFrm;ACBr_NFeDanfeESCPOS;ACBr_Diversos;ACBr_NFeDanfeFR;frxADO24;ACBr_TXTComum;ACBr_GNREGuiaFR;FmxTeeUI;emsedge;JvDotNetCtrls;FireDACIBDriver;fmx;fmxdae;frx24;ACBr_CTeDacteFR;frxDBX24;JvWizards;ACBr_Ponto;FireDACDBXDriver;dbexpress;IndyCore;ACBr_NFSeDanfseFR;vclx;JvPageComps;dsnap;DataSnapCommon;emsclient;fsADO24;FireDACCommon;JvDB;ACBr_PCNComum;RESTBackendComponents;DataSnapConnectors;ACBR_DeSTDA;VCLRESTComponents;ACBr_Reinf;soapserver;ACBr_SAT;JclDeveloperTools;vclie;bindengine;DBXMySQLDriver;FireDACOracleDriver;CloudService;FireDACMySQLDriver;DBXFirebirdDriver;JvCmp;JvHMI;fsDB24;ACBr_PAF;FireDACCommonODBC;FireDACCommonDriver;ACBr_Sintegra;DataSnapClient;ACBr_GNRE;ACBr_SATECFVirtual;inet;PascalScript_Core_D24;bindcompdbx;IndyIPCommon;JvCustom;ACBr_TCP;vcl;DBXSybaseASEDriver;IndyIPServer;JvXPCtrls;ACBr_CTe;IndySystem;ACBr_SATExtratoESCPOS;FireDACDb2Driver;PngComponents;ACBr_Integrador;dsnapcon;ACBr_synapse;ACBre_Social;FireDACMSAccDriver;fmxFireDAC;FireDACInfxDriver;vclimg;ACBr_SPEDImportar;TeeDB;FireDAC;Jcl;ACBr_SPED;JvCore;emshosting;ACBr_Comum;ACBr_MDFe;JvCrypt;FireDACSqliteDriver;FireDACPgDriver;ACBr_LFD;FireDACASADriver;DBXOdbcDriver;FireDACTDataDriver;FMXTee;soaprtl;DbxCommonDriver;JvDlgs;JvRuntimeDesign;JvManagedThreads;Tee;DataSnapServer;xmlrtl;soapmidas;DataSnapNativeClient;fmxobj;vclwinx;FireDACDSDriver;rtl;JvTimeFramework;DbxClientDriver;ACBr_OpenSSL;DBXSybaseASADriver;frxTee24;CustomIPTransport;vcldsnap;ACBr_DFeComum;JvSystem;JvStdCtrls;ACBr_Convenio115;bindcomp;appanalytics;ACBr_Serial;DBXInformixDriver;fsTee24;IndyIPClient;frce;bindcompvcl;TeeUI;frxe24;ACBr_BlocoX;JvDocking;dbxcds;VclSmp;JvPascalInterpreter;adortl;FireDACODBCDriver;ACBr_NFCeECFVirtual;ACBr_BoletoFR;JclVcl;DataSnapIndy10ServerTransport;frxDB24;ACBr_Boleto;ACBr_ANe;dsnapxml;DataSnapProviderClient;dbrtl;inetdbxpress;FireDACMongoDBDriver;IndyProtocols;JvControls;JvPrintPreview;ACBr_SEF2;JclContainers;ACBr_NFSe;ACBr_MTER;ACBr_MDFeDamdfeFR;fmxase;$(DCC_UsePackage)</DCC_UsePackage>
-        <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
-        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
-        <BT_BuildType>Debug</BT_BuildType>
         <VerInfo_Locale>1033</VerInfo_Locale>
+        <DCC_UsePackage>DBXSqliteDriver;RESTComponents;DataSnapServerMidas;DBXDb2Driver;DBXInterBaseDriver;vclactnband;ACBr_TEFD;vclFireDAC;fs24;emsclientfiredac;ACBr_SATWS;DataSnapFireDAC;svnui;tethering;JvGlobus;FireDACADSDriver;JvPluginSystem;ACBr_BPe;DBXMSSQLDriver;JvMM;DatasnapConnectorsFreePascal;FireDACMSSQLDriver;vcltouch;JvBands;ACBr_NFe;vcldb;bindcompfmx;svn;Intraweb;DBXOracleDriver;JvJans;JvNet;inetdb;JvAppFrm;ACBr_NFeDanfeESCPOS;ACBr_Diversos;ACBr_NFeDanfeFR;frxADO24;ACBr_TXTComum;ACBr_GNREGuiaFR;FmxTeeUI;emsedge;JvDotNetCtrls;FireDACIBDriver;fmx;fmxdae;frx24;ACBr_CTeDacteFR;frxDBX24;JvWizards;ACBr_Ponto;FireDACDBXDriver;dbexpress;IndyCore;ACBr_NFSeDanfseFR;vclx;JvPageComps;dsnap;DataSnapCommon;emsclient;fsADO24;FireDACCommon;JvDB;ACBr_PCNComum;RESTBackendComponents;DataSnapConnectors;ACBR_DeSTDA;VCLRESTComponents;ACBr_Reinf;soapserver;ACBr_SAT;JclDeveloperTools;vclie;bindengine;DBXMySQLDriver;FireDACOracleDriver;CloudService;FireDACMySQLDriver;DBXFirebirdDriver;JvCmp;JvHMI;fsDB24;ACBr_PAF;FireDACCommonODBC;FireDACCommonDriver;ACBr_Sintegra;DataSnapClient;ACBr_GNRE;ACBr_SATECFVirtual;inet;PascalScript_Core_D24;bindcompdbx;IndyIPCommon;JvCustom;ACBr_TCP;vcl;DBXSybaseASEDriver;IndyIPServer;JvXPCtrls;ACBr_CTe;IndySystem;ACBr_SATExtratoESCPOS;FireDACDb2Driver;PngComponents;ACBr_Integrador;dsnapcon;ACBr_synapse;ACBre_Social;FireDACMSAccDriver;fmxFireDAC;FireDACInfxDriver;vclimg;ACBr_SPEDImportar;TeeDB;FireDAC;Jcl;ACBr_SPED;JvCore;emshosting;ACBr_Comum;ACBr_MDFe;JvCrypt;FireDACSqliteDriver;FireDACPgDriver;ACBr_LFD;FireDACASADriver;DBXOdbcDriver;FireDACTDataDriver;FMXTee;soaprtl;DbxCommonDriver;JvDlgs;JvRuntimeDesign;JvManagedThreads;Tee;DataSnapServer;xmlrtl;soapmidas;DataSnapNativeClient;fmxobj;vclwinx;FireDACDSDriver;rtl;JvTimeFramework;DbxClientDriver;ACBr_OpenSSL;DBXSybaseASADriver;frxTee24;CustomIPTransport;vcldsnap;ACBr_DFeComum;JvSystem;JvStdCtrls;ACBr_Convenio115;bindcomp;appanalytics;ACBr_Serial;DBXInformixDriver;fsTee24;IndyIPClient;frce;bindcompvcl;TeeUI;frxe24;ACBr_BlocoX;JvDocking;dbxcds;VclSmp;JvPascalInterpreter;adortl;FireDACODBCDriver;ACBr_NFCeECFVirtual;ACBr_BoletoFR;JclVcl;DataSnapIndy10ServerTransport;frxDB24;ACBr_Boleto;ACBr_ANe;dsnapxml;DataSnapProviderClient;dbrtl;inetdbxpress;FireDACMongoDBDriver;IndyProtocols;JvControls;JvPrintPreview;ACBr_SEF2;JclContainers;ACBr_NFSe;ACBr_MTER;ACBr_MDFeDamdfeFR;fmxase;$(DCC_UsePackage)</DCC_UsePackage>
+        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
+        <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
+        <BT_BuildType>Debug</BT_BuildType>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1)'!=''">
         <DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
@@ -78,6 +78,14 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="uTest.pas"/>
+        <DCCReference Include="..\..\MiniREST.ORM.Attribute.pas"/>
+        <DCCReference Include="..\..\MiniREST.ORM.Column.pas"/>
+        <DCCReference Include="..\..\MiniREST.ORM.Common.pas"/>
+        <DCCReference Include="..\..\MiniREST.ORM.EntityManager.pas"/>
+        <DCCReference Include="..\..\MiniREST.ORM.Intf.pas"/>
+        <DCCReference Include="..\..\MiniREST.ORM.Mapper.pas"/>
+        <DCCReference Include="..\..\MiniREST.ORM.Table.pas"/>
+        <DCCReference Include="..\..\MiniREST.ORM.Utils.pas"/>
         <DCCReference Include="..\..\MiniREST.SQL.Base.pas"/>
         <DCCReference Include="..\..\MiniREST.SQL.Common.pas"/>
         <DCCReference Include="..\..\MiniREST.SQL.DBX.pas"/>
@@ -87,14 +95,6 @@
         <DCCReference Include="..\..\MiniREST.Util.pas"/>
         <DCCReference Include="..\..\MiniREST.Intf.pas"/>
         <DCCReference Include="..\..\MiniREST.Common.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.Attribute.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.Common.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.Mapper.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.Intf.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.Utils.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.Table.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.Column.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.EntityManager.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -113,7 +113,7 @@
         <BorlandProject>
             <Delphi.Personality>
                 <Source>
-                    <Source Name="MainSource">MiniRESTSQLTest.dpr</Source>
+                    <Source Name="MainSource">MiniRESTORMTest.dpr</Source>
                 </Source>
             </Delphi.Personality>
             <Deployment Version="3">
@@ -137,13 +137,22 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="Win32\Debug\MiniRESTSQLTest.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="Win32\Debug\MiniRESTORMTest.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
-                        <RemoteName>MiniRESTSQLTest.exe</RemoteName>
+                        <RemoteName>MiniRESTORMTest.exe</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployClass Name="ProjectiOSDeviceResourceRules"/>
+                <DeployClass Name="DependencyModule">
+                    <Platform Name="Win32">
+                        <Operation>0</Operation>
+                        <Extensions>.dll;.bpl</Extensions>
+                    </Platform>
+                    <Platform Name="OSX32">
+                        <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
+                    </Platform>
+                </DeployClass>
                 <DeployClass Name="ProjectOSXResource">
                     <Platform Name="OSX32">
                         <RemoteDir>Contents\Resources</RemoteDir>
@@ -482,16 +491,7 @@
                         <Operation>1</Operation>
                     </Platform>
                 </DeployClass>
-                <DeployClass Name="DependencyModule">
-                    <Platform Name="Win32">
-                        <Operation>0</Operation>
-                        <Extensions>.dll;.bpl</Extensions>
-                    </Platform>
-                    <Platform Name="OSX32">
-                        <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
-                    </Platform>
-                </DeployClass>
+                <DeployClass Name="ProjectiOSDeviceResourceRules"/>
                 <ProjectRoot Platform="iOSDevice64" Name="$(PROJECTNAME).app"/>
                 <ProjectRoot Platform="Win64" Name="$(PROJECTNAME)"/>
                 <ProjectRoot Platform="iOSDevice32" Name="$(PROJECTNAME).app"/>
