--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "mORMot"]
 	path = mORMot
 	url = https://github.com/synopse/mORMot
+[submodule "spring4d"]
+	path = spring4d
+	url = https://bitbucket.org/sglienke/spring4d
