--- a/unittest/SQL/MiniRESTSQLTest.dproj
+++ b/unittest/SQL/MiniRESTSQLTest.dproj
@@ -87,14 +87,8 @@
         <DCCReference Include="..\..\MiniREST.Util.pas"/>
         <DCCReference Include="..\..\MiniREST.Intf.pas"/>
         <DCCReference Include="..\..\MiniREST.Common.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.Attribute.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.Common.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.Mapper.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.Intf.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.Utils.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.Table.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.Column.pas"/>
-        <DCCReference Include="..\..\MiniREST.ORM.EntityManager.pas"/>
+        <DCCReference Include="..\..\MiniREST.SQL.Firebird.pas"/>
+        <DCCReference Include="..\..\MiniREST.Common.Utils.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -143,7 +137,16 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployClass Name="ProjectiOSDeviceResourceRules"/>
+                <DeployClass Name="DependencyModule">
+                    <Platform Name="Win32">
+                        <Operation>0</Operation>
+                        <Extensions>.dll;.bpl</Extensions>
+                    </Platform>
+                    <Platform Name="OSX32">
+                        <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
+                    </Platform>
+                </DeployClass>
                 <DeployClass Name="ProjectOSXResource">
                     <Platform Name="OSX32">
                         <RemoteDir>Contents\Resources</RemoteDir>
@@ -482,16 +485,7 @@
                         <Operation>1</Operation>
                     </Platform>
                 </DeployClass>
-                <DeployClass Name="DependencyModule">
-                    <Platform Name="Win32">
-                        <Operation>0</Operation>
-                        <Extensions>.dll;.bpl</Extensions>
-                    </Platform>
-                    <Platform Name="OSX32">
-                        <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
-                    </Platform>
-                </DeployClass>
+                <DeployClass Name="ProjectiOSDeviceResourceRules"/>
                 <ProjectRoot Platform="iOSDevice64" Name="$(PROJECTNAME).app"/>
                 <ProjectRoot Platform="Win64" Name="$(PROJECTNAME)"/>
                 <ProjectRoot Platform="iOSDevice32" Name="$(PROJECTNAME).app"/>
