--- a/unittest/SQL/MiniRESTSQLTest.lpi
+++ b/unittest/SQL/MiniRESTSQLTest.lpi
@@ -86,6 +86,7 @@
     </CodeGeneration>
     <Linking>
       <Debugging>
+        <DebugInfoType Value="dsDwarf2Set"/>
         <UseHeaptrc Value="True"/>
       </Debugging>
     </Linking>
